<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game.View.GameFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtPlayer1_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_player_1" />

    <TextView
        android:id="@+id/txtPlayer1Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_card" />

    <TextView
        android:id="@+id/txtPlayer2_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_player_2" />

    <TextView
        android:id="@+id/txtPlayer2_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_card" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"

        />

</LinearLayout>